app/styles/main.sass
// bower:sass
// endbower
@import "compass/reset"
@import "compass/css3"
@import "compass/utilities/general/clearfix"
@import "lib/easing"

// @import "bootstrap-sass-official/vendor/assets/stylesheets/bootstrap-custom"

$border-color: #f1d781
$margin-color: #ebc385
$padding-color: #b4c66f
$content-color: #a3c3d4
$margin-text-color: #cba365
$offset-text-color: #b09640
$client-text-color: #72842d
$scroll-color: #aaa
$scroll-text-color: #777

$default-box-sizing: border-box
$default-wrapper-width: 200px
$default-wrapper-height: 200px
$default-wrapper-margin: 20px
$default-wrapper-border-width: 20px
$default-wrapper-padding: 20px

$scroll-bar-width: 15px

$transition-duration: .4s

@import "lib/header"
@import "lib/layout"
@import "lib/footer"
@import "lib/settings_panel"
@import "lib/marker"


// %sizing-transition
    // @include transition-property(height, width)
    // @include transition-duration($transition-duration)
    // @include transition-timing-function(ease-in)

%height-marker
    position: absolute
    padding-right: 1rem
    text-align: right

body
    background: #fafafa
    font-family: "Helvetica Neue", Helvetica, Arial, sans-serif

div
    box-sizing: $default-box-sizing

.is-hidden
    display: none

.browsehappy
    margin: 0.2em 0
    background: #ccc
    color: #000
    padding: 0.2em 0

.demo-container
    position: relative

    .margin-layer
        display: inline-block
        border: dashed 1px #555
        position: relative
        top: 150px
        left: 300px
        background-color: $margin-color

        .margin-marker
            position: absolute
            color: #c19656
            top: 2px
            left: 2px

.element-layer
    width: $default-wrapper-width
    height: $default-wrapper-height
    margin: $default-wrapper-margin
    padding: $default-wrapper-padding
    background-color: $padding-color
    border: solid $border-color
    border-width: $default-wrapper-border-width
    overflow: auto

    .content-layer
        min-width: 120px
        min-height: 120px
        width: 120px
        height: 120px
        background-color: #fff

    .mock-content
        box-sizing: content-box
        pointer-events: none
        position: absolute
        width: 88px
        height: 88px
        padding: 1rem
        font-size: 1.2rem
        color: #406071
        background-color: $content-color
        opacity: .6

    .client-height
        border: 2px dashed $padding-color
        border-right: .2rem solid $padding-color
        color: $client-text-color
        pointer-events: none
        @extend %height-marker

        .padding-marker
            float: left
            margin-left: 4px

    .offset-height
        border: 2px dashed $border-color
        border-right: .2rem solid $border-color
        color: $offset-text-color
        pointer-events: none
        @extend %height-marker

        .border-marker
            float: left
            margin-left: 2px

    .scroll-height
        pointer-events: none
        border: 2px dashed $scroll-color
        border-right: .2rem solid $scroll-color
        color: $scroll-text-color
        @extend %height-marker

    .client-width
        border: 2px dashed $padding-color
        border-bottom: .2rem solid $padding-color
        color: $client-text-color
        pointer-events: none
        @extend %height-marker

    .offset-width
        border: 2px dashed $border-color
        border-bottom: .2rem solid $border-color
        color: $offset-text-color
        pointer-events: none
        @extend %height-marker

    .scroll-width
        pointer-events: none
        border: 2px dashed $scroll-color
        border-bottom: .2rem solid $scroll-color
        color: $scroll-text-color
        @extend %height-marker

    .width-text
        position: absolute
        // right: 0
        bottom: 0

